Initial stab at adding ability to access container-recipes docker registry from builders, and some preliminary work to setup a docker builder backend.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,7 +40,9 @@ set(SOURCE_FILES_CLIENT
 # Scripts required for runtime
 set(SCRIPTS
         Scripts/CreateBuilder
-        Scripts/DestroyBuilder)
+        Scripts/DestroyBuilder
+        Scripts/SingularityBuilderBackend
+        Scripts/DockerBuilderBackend)
 
 # Create executables
 add_executable(builder_queue ${SOURCE_FILES_QUEUE})
