--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ deploy-titan:
   script:
   - ./deploy-titan.sh $CI_COMMIT_TAG
   tags:
-  - titan
+  - Titan
   stage: deploy-client
   only:
   - tags
@@ -15,7 +15,7 @@ deploy-summitdev:
   script:
   - ./deploy-summitdev.sh $CI_COMMIT_TAG
   tags:
-  - ppc64le
+  - SummitDev
   stage: deploy-client
   only:
   - tags
@@ -24,11 +24,11 @@ deploy-openstack:
   script:
   - ./deploy-openstack.sh $CI_COMMIT_TAG
   tags:
-  - openstack
+  - OpenStack
   stage: deploy-queue
   only:
   - tags
   artifacts:
     paths:
-      - artifacts/queue_host.sh
+      - artifacts/queue-host.sh
       - artifacts/ContainerBuilderKey
