fix typo in builder-server component

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,4 +90,4 @@ install(TARGETS container-builder COMPONENT container-builder DESTINATION bin OP
 # Install scripts if target the builder-server
 install(FILES ${SCRIPTS}
         PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ
-WORLD_EXECUTE DESTINATION "${CMAKE_INSTALL_PREFIX}/bin" COMPONENT server OPTIONAL)
+WORLD_EXECUTE DESTINATION "${CMAKE_INSTALL_PREFIX}/bin" COMPONENT builder-server OPTIONAL)
