Fix gitlab CI naming issue

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,7 +20,7 @@ deploy-summitdev:
   only:
   - tags
 
-deploy-summitdev:
+deploy-summit:
   script:
   - cd Deployment && ./deploy-summit.sh $CI_COMMIT_TAG
   tags:
